@@ -1,6 +1,7 @@
 /* -*- Mode:C++; c-file-style:"gnu"; indent-tabs-mode:nil; -*- */
 /*
  * Copyright (c) 2008-2009 Strasbourg University
+ *               2013 Universita' di Firenze
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -16,6 +17,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  * Author: Sebastien Vincent <vincent@clarinet.u-strasbg.fr>
+ *         Tommaso Pecorella <tommaso.pecorella@unifi.it>
  */
 
 #include "ns3/node-list.h"
@@ -24,20 +26,19 @@
 #include "ipv6-interface-container.h"
 #include "ns3/ipv6-static-routing-helper.h"
 
-namespace ns3 
-{
+namespace ns3 {
 
 Ipv6InterfaceContainer::Ipv6InterfaceContainer ()
 {
 }
 
-Ipv6InterfaceContainer::Iterator 
+Ipv6InterfaceContainer::Iterator
 Ipv6InterfaceContainer::Begin (void) const
 {
   return m_interfaces.begin ();
 }
 
-Ipv6InterfaceContainer::Iterator 
+Ipv6InterfaceContainer::Iterator
 Ipv6InterfaceContainer::End (void) const
 {
   return m_interfaces.end ();
@@ -81,6 +82,10 @@ void Ipv6InterfaceContainer::Add (Ipv6InterfaceContainer& c)
 
 void Ipv6InterfaceContainer::SetRouter (uint32_t i, bool router)
 {
+  // This function is deprecated and should be substituted by:
+  // SetForwarding (RouterInterfaceIndex, true);
+  // SetDefaultRouteInAllNodes (RouterInterfaceIndex);
+
   Ptr<Ipv6> ipv6 = m_interfaces[i].first;
   ipv6->SetForwarding (m_interfaces[i].second, router);
 
@@ -105,17 +110,183 @@ void Ipv6InterfaceContainer::SetRouter (uint32_t i, bool router)
     }
 }
 
-void Ipv6InterfaceContainer::SetDefaultRoute (uint32_t i, uint32_t router)
+void Ipv6InterfaceContainer::SetForwarding (uint32_t i, bool router)
 {
   Ptr<Ipv6> ipv6 = m_interfaces[i].first;
-  Ptr<Ipv6> ipv6Router = m_interfaces[router].first;
-  Ipv6Address routerAddress = ipv6Router->GetAddress (m_interfaces[router].second, 0).GetAddress ();
+  ipv6->SetForwarding (m_interfaces[i].second, router);
+}
+
+void Ipv6InterfaceContainer::SetDefaultRouteInAllNodes (uint32_t router)
+{
+  Ptr<Ipv6> ipv6 = m_interfaces[router].first;
+  uint32_t other;
+
+  Ipv6Address routerAddress = GetLinkLocalAddress (router);
+  NS_ASSERT_MSG (routerAddress != Ipv6Address::GetAny (), "No link-local address found on router, aborting");
+
+  for (other = 0; other < m_interfaces.size (); other++)
+    {
+      if (other != router)
+        {
+          Ptr<Ipv6StaticRouting> routing = 0;
+          Ipv6StaticRoutingHelper routingHelper;
+
+          ipv6 = m_interfaces[other].first;
+          routing = routingHelper.GetStaticRouting (ipv6);
+          routing->SetDefaultRoute (routerAddress, m_interfaces[other].second);
+        }
+    }
+}
+
+void Ipv6InterfaceContainer::SetDefaultRouteInAllNodes (Ipv6Address routerAddress)
+{
+  uint32_t routerIndex;
+  bool found = false;
+  for (uint32_t index = 0; index < m_interfaces.size (); index++)
+    {
+      Ptr<Ipv6> ipv6 = m_interfaces[index].first;
+      for (uint32_t i = 0; i < ipv6->GetNAddresses (m_interfaces[index].second); i++)
+        {
+          Ipv6Address addr = ipv6->GetAddress (m_interfaces[index].second, i).GetAddress ();
+          if (addr == routerAddress)
+            {
+              routerIndex = index;
+              found = true;
+              break;
+            }
+        }
+      if (found)
+        {
+          break;
+        }
+    }
+  NS_ASSERT_MSG (found != true, "No such address in the interfaces. Aborting.");
+
+  for (uint32_t other = 0; other < m_interfaces.size (); other++)
+    {
+      if (other != routerIndex)
+        {
+          Ptr<Ipv6StaticRouting> routing = 0;
+          Ipv6StaticRoutingHelper routingHelper;
+
+          Ptr<Ipv6> ipv6 = m_interfaces[other].first;
+          routing = routingHelper.GetStaticRouting (ipv6);
+          routing->SetDefaultRoute (routerAddress, m_interfaces[other].second);
+        }
+    }
+}
+
+
+void Ipv6InterfaceContainer::SetDefaultRoute (uint32_t i, uint32_t router)
+{
+  NS_ASSERT_MSG (i != router, "A node shouldn't set itself as the default router, isn't it? Aborting.");
+
+  Ptr<Ipv6> ipv6 = m_interfaces[i].first;
+
+  Ipv6Address routerAddress = GetLinkLocalAddress (router);
+  NS_ASSERT_MSG (routerAddress != Ipv6Address::GetAny (), "No link-local address found on router, aborting");
+
   Ptr<Ipv6StaticRouting> routing = 0;
   Ipv6StaticRoutingHelper routingHelper;
 
   routing = routingHelper.GetStaticRouting (ipv6);
   routing->SetDefaultRoute (routerAddress, m_interfaces[i].second);
 }
+
+
+void Ipv6InterfaceContainer::SetDefaultRoute (uint32_t i, Ipv6Address routerAddr)
+{
+  uint32_t routerIndex;
+  bool found = false;
+  for (uint32_t index = 0; index < m_interfaces.size (); index++)
+    {
+      Ptr<Ipv6> ipv6 = m_interfaces[index].first;
+      for (uint32_t i = 0; i < ipv6->GetNAddresses (m_interfaces[index].second); i++)
+        {
+          Ipv6Address addr = ipv6->GetAddress (m_interfaces[index].second, i).GetAddress ();
+          if (addr == routerAddr)
+            {
+              routerIndex = index;
+              found = true;
+              break;
+            }
+        }
+      if (found)
+        {
+          break;
+        }
+    }
+  NS_ASSERT_MSG (found != true, "No such address in the interfaces. Aborting.");
+
+  NS_ASSERT_MSG (i != routerIndex, "A node shouldn't set itself as the default router, isn't it? Aborting.");
+
+  Ptr<Ipv6> ipv6 = m_interfaces[i].first;
+  Ipv6Address routerLinkLocalAddress = GetLinkLocalAddress (routerIndex);
+  Ptr<Ipv6StaticRouting> routing = 0;
+  Ipv6StaticRoutingHelper routingHelper;
+
+  routing = routingHelper.GetStaticRouting (ipv6);
+  routing->SetDefaultRoute (routerLinkLocalAddress, m_interfaces[i].second);
+}
+
+
+Ipv6Address Ipv6InterfaceContainer::GetLinkLocalAddress (uint32_t index)
+{
+  Ptr<Ipv6> ipv6 = m_interfaces[index].first;
+  for (uint32_t i = 0; i < ipv6->GetNAddresses (m_interfaces[index].second); i++)
+    {
+      Ipv6InterfaceAddress iAddress;
+      iAddress = ipv6->GetAddress (m_interfaces[index].second, i);
+      if (iAddress.GetScope () == Ipv6InterfaceAddress::LINKLOCAL)
+        {
+          return iAddress.GetAddress ();
+        }
+    }
+  return Ipv6Address::GetAny ();
+}
+
+Ipv6Address Ipv6InterfaceContainer::GetLinkLocalAddress (Ipv6Address address)
+{
+  if (address.IsLinkLocal ())
+    {
+      return address;
+    }
+
+  uint32_t nodeIndex;
+  bool found = false;
+  for (uint32_t index = 0; index < m_interfaces.size (); index++)
+    {
+      Ptr<Ipv6> ipv6 = m_interfaces[index].first;
+      for (uint32_t i = 0; i < ipv6->GetNAddresses (m_interfaces[index].second); i++)
+        {
+          Ipv6Address addr = ipv6->GetAddress (m_interfaces[index].second, i).GetAddress ();
+          if (addr == address)
+            {
+              nodeIndex = index;
+              found = true;
+              break;
+            }
+        }
+      if (found)
+        {
+          break;
+        }
+    }
+  NS_ASSERT_MSG (found != true, "No such address in the interfaces. Aborting.");
+
+  Ptr<Ipv6> ipv6 = m_interfaces[nodeIndex].first;
+  for (uint32_t i = 0; i < ipv6->GetNAddresses (m_interfaces[nodeIndex].second); i++)
+    {
+      Ipv6InterfaceAddress iAddress;
+      iAddress = ipv6->GetAddress (m_interfaces[nodeIndex].second, i);
+      if (iAddress.GetScope () == Ipv6InterfaceAddress::LINKLOCAL)
+        {
+          return iAddress.GetAddress ();
+        }
+    }
+  return Ipv6Address::GetAny ();
+}
+
 
 } /* namespace ns3 */
 
